# linkedin-scraper

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  run.py  test.html  test_login.py
src/linkedin_scraper/: __init__.py  anti_detection.py  auth_handler.py  config.py  llm_extractor.py  logging.py  main.py
src/linkedin_scraper/models/: company.py  profile.py
src/linkedin_scraper/prompts/: company.py  profile.py
src/linkedin_scraper/scrapers/: __init__.py  company.py  linkedin.py  profile.py
src/linkedin_scraper/utils/: __init__.py  html_cleaner.py  linkedin_utils.py
tests/: __init__.py  test_llm.py
